--- a/My hobbies.html
+++ b/My hobbies.html
@@ -26,17 +26,17 @@ Till Now I have travelled 2 Countries and numerous places inside Bangaldesh <br>
 
 <div class="row">
   <div class="column">
-    <img src="eden garden.jpg">
-    <img src="hawrah bridge.jpg">
-    <img src="Darjelling.jpg">
-    <img src="tajmahal.jpg">
+    <img src="Eden Garden.JPG">
+    <img src="Hawrah Bridge.JPG">
+    <img src="Darjelling.JPG">
+    <img src="Tajmahal.JPG">
 
   </div>
   <div class="column">
-    <img src="agra mosque.jpg">
-    <img src="Red fort.jpg">
-    <img src="delhi gate.jpg">
-      <img src="azmir.jpg">
+    <img src="Agra Mosque.JPG">
+    <img src="Red Fort.JPG">
+    <img src="Delhi Gate.JPG">
+      <img src="Azmir.JPG">
   </div>
 </div>
 
@@ -47,12 +47,12 @@ Till Now I have travelled 2 Countries and numerous places inside Bangaldesh <br>
 <p class="paragraph">2.	Saudi Arabia: In 2013, I went there to perform Umra Hajj. I really liked the Holy Environment it carries. I was lucky enough to visit most of the important places in Makkah, Madina, Taif and Riyad.<br><br>
   <div class="row">
   <div class="column">
-    <img src="kaba.jpg">
-    <img src="makkah tower.jpg">
-    <img src="nababi.jpg">
-    <img src="s moun.jpg">
-    <img src="safa.jpg">
-    <img src="tower.jpg">
+    <img src="Kaba.JPG">
+    <img src="Makkah Tower.JPG">
+    <img src="Nababi.JPG">
+    <img src="S moun.JPG">
+    <img src="safa.JPG">
+    <img src="tower.JPG">
   </div>
     </div>
 
@@ -77,7 +77,7 @@ Till Now I have travelled 2 Countries and numerous places inside Bangaldesh <br>
   Driving Car is kind of everyday task for me. Still I love it whenever I have to do it. It’s my favourite thing to do since last 6/7 Years. City drives aren’t so exciting to me, rather boring.<br> So, when chances came, I went to many places gifting myself a long drive like Chattagram, Bandarban, Munshiganj and so on.
 </p>
 <div class="column">
-<img src="car.jpg" alt="Alve">
+<img src="Car.jpg" alt="Alve">
 </div>
 </body>
 </html>
