--- a/experience.html
+++ b/experience.html
@@ -15,7 +15,7 @@
 <p class="paragraph">Right now, I am General Secretary of Rising Star Charity Bangaldesh. Started from 2015, our organization have worked in many districts of Bangaldesh during disasters including Covid-19. We have 12 branches all over Bangaldesh. But our donation collection is worldwide. I find inner peace in this work. </p>
 <div class="column">
   <img src="s2.png">
-  <img src="r1.jpg">
+  <img src="r1.JPG">
   <img src="r2.jpg">
 </div>
   </body>
